# pass_app

./: .SRCINFO  .gitignore  AUR_GUIDE.md  DEV_LOG.md  DISTRIBUTION.md  DISTRIBUTION_GUIDE.md  HOTKEY_BARS_IMPROVEMENTS.md  HOTKEY_MAP.md  HOW_IT_WORKS.md  INSTALL.md  KEYMAP_UNIFICATION.md  LICENSE  LINTING.md  MANIFEST.in  PKGBUILD  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_DISTRIBUTION.md  README.md  UI_EDIT_MODE_IMPROVEMENTS.md  backend_utils.py  build_executable.sh  build_package.sh  cleanup.sh  fa_keyboard_icons.py  hotkey_bar.py  hotkey_manager.py  install.sh  pass-kb.desktop  pass-kb.spec  pass_backend.py  pass_client.py  pyproject.toml  requirements.txt  ruff.toml  save_modified_svg.py  setup.py  test_icon_color.py  test_keyboard_icons.py  test_svg_mod2.py  (+4 more)
_archive/20251016_192639/: RENAME_SUMMARY.md  SPECS.md  hotkey_bar.py  icon_utils.py  test_line_edit.py  test_svg_mod.py  test_svg_mod2.py
_archive/20251016_192639/.password-store/ai/: gemini_cli_mom.gpg
_archive/20251016_192639/.password-store/personal/: gym-locker.gpg
_archive/unused_20251017_112737/md_files/: HOTKEY_BARS_UPDATE.md
_archive/unused_20251017_112737/python_files/: icon_utils.py  pass_backend.py  save_modified_svg.py  test_keyboard_icons.py  test_line_edit.py  test_svg_mod.py
_archive/unused_20251017_112737/utils/: analyze_dependencies.py
components/: confirmation_dialog.py  hotkey_cheatsheet_dialog.py  hotkey_help.py  password_generator_dialog.py  secret_create_view.py  secret_detail_view.py  secret_list_item.py  status_bar.py
