[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pass-keyboard-control"
version = "1.0.0"
description = "AI-generated keyboard-driven GUI for Unix password manager (pass) with total keyboard control"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "mr-scrpt", email = "mr.scrpt@gmail.com"}
]
keywords = ["password", "manager", "gui", "pass", "gpg", "security", "keyboard", "AI-generated"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
]

dependencies = [
    "PySide6>=6.5.0",
    "qt-material>=2.14",
    "QtAwesome>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.scripts]
pass-kb = "pass_client:main"

[project.gui-scripts]
pass-kb-gui = "pass_client:main"

[project.urls]
Homepage = "https://github.com/mr-scrpt/pass-keyboard-control"
Documentation = "https://github.com/mr-scrpt/pass-keyboard-control/wiki"
Repository = "https://github.com/mr-scrpt/pass-keyboard-control"
"Bug Tracker" = "https://github.com/mr-scrpt/pass-keyboard-control/issues"

[tool.setuptools]
packages = ["components"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]
